fix reviews-scrollbar

--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -8,6 +8,7 @@
 .swiper-scrollbar {
   background: #0e2e29 !important;
   border-radius: 0px !important;
+  opacity: 1 !important;
 }
 .swiper-scrollbar-drag {
   background: var(--accent-color) !important;
